force-app/main/default/objects/Lead/fields/Company_Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Avatar_URL__c</fullName>
    <description>Company Avatar picture URL</description>
    <inlineHelpText>Company Avatar picture URL</inlineHelpText>
    <label>Company Avatar URL</label>
    <type>Url</type>
</CustomField>