force-app/main/default/objects/Lead/fields/Company_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Company_LinkedIn__c</fullName>
    <inlineHelpText>Company LinkedIn Profile URL</inlineHelpText>
    <label>Company LinkedIn</label>
    <type>Url</type>
</CustomField>