force-app/main/default/objects/Lead/fields/CompanyDunsNumber__c.field-meta.xml
<CustomField>
    <fullName>CompanyDunsNumber__c</fullName>
    <description>The Data Universal Numbering System (D-U-N-S) number, which is a unique, nine-digit number assigned to every business location in the Dun &amp; Bradstreet database that has a unique, separate, and distinct operation. Industries and companies use D-U-N-S numbers as a global standard for business identification and tracking. Maximum size is 9 characters.</description>
    <label>Company D-U-N-S Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>