force-app/main/default/objects/Lead/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <description>LinkedIn Profile URL</description>
    <inlineHelpText>LinkedIn Profile URL</inlineHelpText>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>