force-app/main/default/objects/Lead/fields/Sic__c.field-meta.xml
<CustomField>
    <fullName>Sic__c</fullName>
    <description>Standard Industrial Classification code of the company’s main business categorization, for example, 57340 for Electronics. Maximum of 20 characters.</description>
    <label>SIC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>