force-app/main/default/objects/Lead/fields/Xing__c.field-meta.xml
<CustomField>
    <fullName>Xing__c</fullName>
    <description>Xing Profile URL</description>
    <inlineHelpText>Xing Profile URL</inlineHelpText>
    <label>Xing</label>
    <type>Url</type>
</CustomField>