force-app/main/default/objects/Lead/fields/YearStarted__c.field-meta.xml
<CustomField>
    <fullName>YearStarted__c</fullName>
    <description>The date when an org was legally established. Maximum length is 4 characters.</description>
    <label>Year Started</label>
    <length>4</length>
    <type>Text</type>
</CustomField>